--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-    "name": "stream/junkman",
-    "description": "php运行环境代码段实时监控,gc日志收集分析",
+    "name": "dendrogram/DenDroGram",
+    "description": "php对关系型数据转换成树状图",
     "authors": [
         {
             "name": "Hikki",
@@ -9,20 +9,17 @@
     ],
     "license": "MIT",
     "require": {
-        "php": ">=7.0"
+        "illuminate/support": "~5.0",
+        "illuminate/database": "~5.0"
     },
     "autoload": {
         "psr-4": {
-            "JunkMan\\Abstracts\\": "src/Abstracts",
-            "JunkMan\\Configuration\\": "src/Configuration",
-            "JunkMan\\Container\\": "src/Container",
-            "JunkMan\\Driver\\": "src/Driver",
-            "JunkMan\\E\\": "src/E",
-            "JunkMan\\Instrument\\": "src/Instrument",
-            "JunkMan\\Operation\\": "src/Operation",
-            "JunkMan\\Pipeline\\": "src/Pipeline",
-            "JunkMan\\Resolver\\": "src/Resolver",
-            "JunkMan\\": "src/"
+            "DenDroGram\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+
         }
     }
 }
