--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "dendrogram/DenDroGram",
+    "name": "dendrogram/dendrogram",
     "description": "php对关系型数据转换成树状图",
     "authors": [
         {
