fix  composer name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "brillTree/brillTree",
+    "name": "brill-tree/brill-tree",
     "description": "php对关系型数据转换成树状图",
     "authors": [
         {
